<resources>
    <string name="app_name">流水账管理系统</string>
    <string name="accountbook">选择记账簿</string>
    <string name="accountbook1">选择账簿</string>
    <string name="createbook">创建账簿</string>
    <string name="createsubject">创建记账科目</string>
    <string name="accountstart">我要记账</string>
    <string name="lablebook">*填写账簿名称</string>
    <string name="labremark">备注信息</string>
    <string name="createbooktype">生成账簿</string>
    <string name="exit">退出维护</string>
    <string name="accountOut">支出</string>
    <string name="accountIn">收入</string>
    <string name="createSubject">创建科目</string>
    <string name="subjectname">科目名称</string>
    <string name="subject">记账科目</string>
    <string name="accountname">记账名称</string>
    <string name="count">数量</string>
    <string name="price">单价</string>
    <string name="check">需要对账</string>
    <string name="account">记账</string>
    <string name="accountupdate">修帐</string>
    <string name="accountchecked">对账</string>
    <string name="accountreport">查账</string>
    <string name="accountdate">入账日期</string>
    <string name="selectdate">选择</string>
    <string name="camerapic">票据拍照</string>
    <string name="isSubject">按项目查询</string>
    <string name="bolangxian">至</string>
    <string name="date4date">账期</string>
    <string name="createdate">操作时间</string>
    <string name="img4">原图</string>
    <string name="uploadAccountItems">上传记账明细</string>
    <string name="title_activity_settingwebservice">SettingwebserviceActivity</string>
    <string name="scanQRcode">扫码获取服务器地址</string>
    <string name="connserviceStr">连接服务器失败，请扫描二维码获取服务器地址，二维码可在《个人记账系统》的PC端获取！</string>
    <string name="serverStr">请扫描二维码或手工输入获取服务器地址</string>
    <string name="title_activity_loginsys">个人记账系统和</string>
    <string name="password">密码：</string>
    <string name="bakaccount">备份账本</string>
    <string name="serversetting">服务器设定</string>
    <string name="saoma">扫码</string>
    <string name="servername">服务器：</string>
    <string name="regionuser">注 册</string>
    <string name="password1">*密 码：</string>
    <string name="password2">*确认密码：</string>
    <string name="usercode">*注册姓名：</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_doaccount">个人记账系统</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
