<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.zgnj.tiexi.shenyang.myaccount.BookcreateActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/pnlCreateBookType_new"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <Button
            android:id="@+id/btnBookType_new"
            style="@android:style/Widget.Button"
            android:layout_width="89dp"
            android:layout_height="40dp"
            android:text="@string/createbooktype"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.572"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.968"/>

        <Button
            android:id="@+id/btnExit_new"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="82dp"
            android:layout_height="39dp"
            android:text="@string/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.963"
            />

        <EditText
            android:id="@+id/edtBookName_new"
            android:layout_width="289dp"
            android:layout_height="49dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.163"
            />

        <EditText
            android:id="@+id/edtBookRemark_new"
            android:layout_width="291dp"
            android:layout_height="74dp"
            android:ems="10"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.68"/>

        <TextView
            android:id="@+id/textView3_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lablebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.069"/>

        <TextView
            android:id="@+id/textView2_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labremark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.436"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/txvBook_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/accountbook"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"/>

    <Spinner
        android:id="@+id/cmbBookTypeList_new"
        style="@android:style/Widget.Spinner.DropDown"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:spinnerMode="dialog"
        android:theme="@android:style/Theme.Holo.Light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        tools:spinnerMode="dialog"/>


</android.support.constraint.ConstraintLayout>
